--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Blog Flexível</title>
+		<title>Blog de Estudo</title>
 		<meta charset="uft-8">
 		<meta name="viewport content=device-width, initial-scale=1, shrink-to-fit=no">
+		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap"
+		rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Iniciando</h1>
+		<div class="superinfo-bg">
+			<div class="superinfo">
+				<p>Estudando flexbox</p>
+				<a href="tel:+556199994242">+55 61 9999-4242</a>
+				<p>Thaiane Braga</p>
+			</div>
+		</div>
 	</body>
 </html>
