Add imgs and first section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Blog de Estudo</title>
+		<title>Dominando Flexbox</title>
 		<meta charset="uft-8">
 		<meta name="viewport content=device-width, initial-scale=1, shrink-to-fit=no">
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap"
@@ -9,12 +9,53 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
+
 		<div class="superinfo-bg">
 			<div class="superinfo">
-				<p>Estudando flexbox</p>
+				<p>Estudos de Front</p>
 				<a href="tel:+556199994242">+55 61 9999-4242</a>
 				<p>Thaiane Braga</p>
 			</div>
 		</div>
+
+		<header class="menu-bg">
+			<div class="menu">
+				<div class="menu-logo">
+					<a href="#">Domindo Flexbox</a>
+				</div>
+				<nav>
+					<ul>
+						<li><a href="#sobre">Sobre</a></li>
+						<li><a href="#produtos">Produtos</a></li>
+						<li><a href="#preco">Preco</a></li>
+						<li><a href="#qualidade">Qualidade</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+
+		<h1 class="introducao">Novos valores e <br> Propriedades de CSS</h1>
+
+		<section class="sobre" id="sobre">
+			<div class="sobre-info">
+				<h1>Sobre</h1>
+				<p>
+					O que temos que ter sempre em mente é que a determinação clara de objetivos 
+					afeta positivamente a correta previsão das condições inegavelmente apropriadas 
+					objetivos
+				</p>
+				<p>
+					O que temos que ter sempre em mente é que a determinação clara de objetivos 
+					afeta positivamente a correta previsão das condições inegavelmente apropriadas 
+					objetivos
+				</p>
+			</div>
+			<div class="sobre-img">
+				<img src="./img/sobre1.jpg" alt="Sobre 1">
+			</div>
+			<div class="sobre-img">
+				<img src="./img/sobre2.jpg" alt="Sobre 2">
+			</div>
+		</section>
 	</body>
 </html>
