Add product section

--- a/index.html
+++ b/index.html
@@ -57,5 +57,23 @@
 				<img src="./img/sobre2.jpg" alt="Sobre 2">
 			</div>
 		</section>
+
+		<section class="produtos" id="produtos">
+			<h1>Produtos</h1>
+			<div class="produtos-container">
+				<div class="produtos-item purple">
+					<h2>Purple</h2>
+					<img src="./img/produtos1.jpg" alt="Produtos 1">
+				</div>
+				<div class="produtos-item pink">
+					<h2>Pink</h2>
+					<img src="./img/produtos2.jpg" alt="Produtos 2">
+				</div>
+				<div class="produtos-item blue">
+					<h2>Blue</h2>
+					<img src="./img/produtos3.jpg" alt="Produtos 3">
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
