--- a/index.html
+++ b/index.html
@@ -75,5 +75,96 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="preco" id="preco">
+			<div class="preco-item">
+				<h2>Cobre</h2>
+				<span><sup>R$</sup>19</span>
+				<ul>
+					<li>Planos Ilimitados</li>
+					<li>Acesso Restrito</li>
+					<li>Conteúdo Secreto</li>
+					<li>Suporte 24h</li>
+				</ul>
+				<a href="#">Comprar</a>
+			</div>
+			
+			<div class="preco-item">
+				<h2>Prata</h2>
+				<span><sup>R$</sup>39</span>
+				<ul>
+					<li>Planos Ilimitados</li>
+					<li>Acesso Restrito</li>
+					<li>Conteúdo Secreto</li>
+					<li>Suporte 24h</li>
+					<li>Compra Exclusiva</li>
+				</ul>
+				<a href="#">Comprar</a>
+			</div>
+			
+			<div class="preco-item">
+				<h2>Ouro</h2>
+				<span><sup>R$</sup>79</span>
+				<ul>
+					<li>Planos Ilimitados</li>
+					<li>Acesso Restrito</li>
+					<li>Conteúdo Secreto</li>
+					<li>Suporte 24h</li>
+					<li>Compra Exclusiva</li>
+					<li>Download dos Itens</li>
+				</ul>
+				<a href="#">Comprar</a>
+			</div>
+		</section>
+	
+		<section class="qualidade" id="qualidade">
+			<div class="qualidade-item">
+				<h2>Inteligente</h2>
+				<p>
+					O que temos que ter sempre em mente é que a determinação clara de objetivos afeta 
+					positivamente a correta previsão
+				</p>
+			</div>
+			
+			<div class="qualidade-item">
+				<h2>Compacto</h2>
+				<p>
+					O que temos que ter sempre em mente é que a determinação 
+					clara de objetivos afeta positivamente a correta previsão das condições inegavelmente
+				</p>
+			</div>
+			
+			<div class="qualidade-item">
+				<h2>Econômico</h2>
+				<p>
+					O que temos que ter sempre em mente é que 
+					a determinação clara de objetivos afeta positivamente a correta previsão
+				</p>
+			</div>
+			
+			<div class="qualidade-item">
+				<h2>Transparente</h2>
+				<p>
+					O que temos que ter sempre em mente é que a determinação
+					clara de objetivos afeta positivamente a correta previsão
+				</p>
+			</div>
+			
+			<div class="qualidade-item">
+				<h2>Opaco</h2>
+				<p>
+					O que temos que ter sempre em mente é que a determinação clara 
+					de objetivos afeta positivamente a correta previsão das condições inegavelmente
+				</p>
+			</div>
+			
+			<div class="qualidade-item">
+				<h2>Sustentável</h2>
+				<p>
+					O que temos que ter sempre em mente é que a determinação 
+					clara de objetivos afeta positivamente a correta previsão
+				</p>
+			</div>
+		</section>
 	</body>
 </html>
