Add newsletter section

--- a/index.html
+++ b/index.html
@@ -166,5 +166,20 @@
 				</p>
 			</div>
 		</section>
+
+		<section class="newsletter">
+			<div class="newsletter-info">
+				<h1>Newsletter</h1>
+				<p>assine e fique por dentro das novidades</p>
+			</div>
+			<form class="newsletter-form">
+				<input type="text" placeholder="Seu e-mail">
+				<button type="submit">Assinar</button>
+			</form>
+		</section>
+		
+		<footer class="footer">
+			<p>Dominando Flexbox ©Todos os direitos reservados.</p>
+		</footer>
 	</body>
 </html>
