--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport content=device-width, initial-scale=1, shrink-to-fit=no">
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap"
 		rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 	</head>
 	<body>
 
