--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="menu-logo">
 					<a href="#">Domindo Flexbox</a>
 				</div>
-				<nav>
+				<nav class="menu-nav">
 					<ul>
 						<li><a href="#sobre">Sobre</a></li>
 						<li><a href="#produtos">Produtos</a></li>
