Add live-server and change colors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dominando Flexbox</title>
+		<title>Dominando Front</title>
 		<meta charset="uft-8">
 		<meta name="viewport content=device-width, initial-scale=1, shrink-to-fit=no">
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap"
@@ -21,33 +21,30 @@
 		<header class="menu-bg">
 			<div class="menu">
 				<div class="menu-logo">
-					<a href="#">Domindo Flexbox</a>
+					<a href="#">Domindo Front</a>
 				</div>
 				<nav class="menu-nav">
 					<ul>
 						<li><a href="#sobre">Sobre</a></li>
-						<li><a href="#produtos">Produtos</a></li>
-						<li><a href="#preco">Preco</a></li>
-						<li><a href="#qualidade">Qualidade</a></li>
+						<li><a href="#gatas">Gatas</a></li>
+						<li><a href="#habilidades">Habilidades</a></li>
+						<li><a href="#contato">Contato</a></li>
 					</ul>
 				</nav>
 			</div>
 		</header>
 
-		<h1 class="introducao">Novos valores e <br> Propriedades de CSS</h1>
+		<h1 class="introducao">Site das Gatinhas <br> Yumi e Nox</h1>
 
 		<section class="sobre" id="sobre">
 			<div class="sobre-info">
 				<h1>Sobre</h1>
 				<p>
-					O que temos que ter sempre em mente é que a determinação clara de objetivos 
-					afeta positivamente a correta previsão das condições inegavelmente apropriadas 
-					objetivos
+					A Yumi e a Nox são duas gatinhas que gaúchas que foram adotadas no início de 2018. As irmãs chegaram em cana com muito medo e frio.
+					Após um tempo, ambas iniciaram a exploração do ambiente e dominaram o território.
 				</p>
 				<p>
-					O que temos que ter sempre em mente é que a determinação clara de objetivos 
-					afeta positivamente a correta previsão das condições inegavelmente apropriadas 
-					objetivos
+					As gatinhas hoje iniciam a dominação também virtualmente por meio desse site. Mas calma, elas só querem com isso ainda mais carinho e dormir enrolada nas cobertas.
 				</p>
 			</div>
 			<div class="sobre-img">
@@ -58,8 +55,8 @@
 			</div>
 		</section>
 
-		<section class="produtos" id="produtos">
-			<h1>Produtos</h1>
+		<section class="gatas" id="gatas">
+			<h1>Gatas</h1>
 			<div class="produtos-container">
 				<div class="produtos-item purple">
 					<h2>Purple</h2>
@@ -76,7 +73,7 @@
 			</div>
 		</section>
 
-		<section class="preco" id="preco">
+		<section class="habilidades" id="habilidades">
 			<div class="preco-item">
 				<h2>Cobre</h2>
 				<span><sup>R$</sup>19</span>
@@ -117,9 +114,9 @@
 			</div>
 		</section>
 	
-		<section class="qualidade" id="qualidade">
+		<section class="contato" id="contato">
 			<div class="qualidade-item">
-				<h2>Inteligente</h2>
+				<h2>Contato</h2>
 				<p>
 					O que temos que ter sempre em mente é que a determinação clara de objetivos afeta 
 					positivamente a correta previsão
@@ -179,7 +176,7 @@
 		</section>
 		
 		<footer class="footer">
-			<p>Dominando Flexbox ©Todos os direitos reservados.</p>
+			<p>Dominando Flexbox com site para Yumi e Nox ©Todos os direitos reservados.</p>
 		</footer>
 	</body>
 </html>
