Add sobre and imgs

--- a/index.html
+++ b/index.html
@@ -40,18 +40,20 @@
 			<div class="sobre-info">
 				<h1>Sobre</h1>
 				<p>
-					A Yumi e a Nox são duas gatinhas que gaúchas que foram adotadas no início de 2018. As irmãs chegaram em cana com muito medo e frio.
+					A Yumi e a Nox são duas gatinhas que gaúchas que foram adotadas no início de 2018. As irmãs chegaram em casa com muito medo e frio.
 					Após um tempo, ambas iniciaram a exploração do ambiente e dominaram o território.
 				</p>
 				<p>
 					As gatinhas hoje iniciam a dominação também virtualmente por meio desse site. Mas calma, elas só querem com isso ainda mais carinho e dormir enrolada nas cobertas.
 				</p>
 			</div>
-			<div class="sobre-img">
-				<img src="./img/sobre1.jpg" alt="Sobre 1">
-			</div>
-			<div class="sobre-img">
-				<img src="./img/sobre2.jpg" alt="Sobre 2">
+			<div class="sobre-imgs">
+				<div class="sobre-img">
+					<img src="./img/yumi.png" alt="Sobre 1">
+				</div>
+				<div class="sobre-img">
+					<img src="./img/nox.png" alt="Sobre 2">
+				</div>
 			</div>
 		</section>
 
