--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<header class="menu-bg">
 			<div class="menu">
 				<div class="menu-logo">
-					<a href="#">Domindo Front</a>
+					<a href="#">Dominando Front</a>
 				</div>
 				<nav class="menu-nav">
 					<ul>
@@ -40,7 +40,7 @@
 			<div class="sobre-info">
 				<h1>Sobre</h1>
 				<p>
-					A Yumi e a Nox são duas gatinhas que gaúchas que foram adotadas no início de 2018. As irmãs chegaram em casa com muito medo e frio.
+					A Yumi e a Nox são duas gatinhas gaúchas que foram adotadas no início de 2018. As irmãs chegaram em casa com muito medo e frio.
 					Após um tempo, ambas iniciaram a exploração do ambiente e dominaram o território.
 				</p>
 				<p>
