Add hobbies topic

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<nav class="menu-nav">
 					<ul>
 						<li><a href="#sobre">Sobre</a></li>
-						<li><a href="#gatas">Gatas</a></li>
+						<li><a href="#hobbies">Hobbies</a></li>
 						<li><a href="#habilidades">Habilidades</a></li>
 						<li><a href="#contato">Contato</a></li>
 					</ul>
@@ -47,30 +47,28 @@
 					As gatinhas hoje iniciam a dominação também virtualmente por meio desse site. Mas calma, elas só querem com isso ainda mais carinho e dormir enrolada nas cobertas.
 				</p>
 			</div>
-			<div class="sobre-imgs">
-				<div class="sobre-img">
-					<img src="./img/yumi.png" alt="Sobre 1">
-				</div>
-				<div class="sobre-img">
-					<img src="./img/nox.png" alt="Sobre 2">
-				</div>
+			<div class="sobre-img">
+				<img src="./img/yumi.png" alt="Sobre 1">
+			</div>
+			<div class="sobre-img">
+				<img src="./img/nox.png" alt="Sobre 2">
 			</div>
 		</section>
 
-		<section class="gatas" id="gatas">
-			<h1>Gatas</h1>
-			<div class="produtos-container">
-				<div class="produtos-item purple">
-					<h2>Purple</h2>
-					<img src="./img/produtos1.jpg" alt="Produtos 1">
+		<section class="hobbies" id="hobbies">
+			<h1>Hobbies</h1>
+			<div class="hobbies-container">
+				<div class="hobbies-item purple">
+					<h2>Dormir</h2>
+					<img src="./img/produtos1.jpg" alt="hobbies 1">
 				</div>
-				<div class="produtos-item pink">
-					<h2>Pink</h2>
-					<img src="./img/produtos2.jpg" alt="Produtos 2">
+				<div class="hobbies-item pink">
+					<h2>Brincar</h2>
+					<img src="./img/produtos2.jpg" alt="hobbies 2">
 				</div>
-				<div class="produtos-item blue">
-					<h2>Blue</h2>
-					<img src="./img/produtos3.jpg" alt="Produtos 3">
+				<div class="hobbies-item blue">
+					<h2>Banho de sol</h2>
+					<img src="./img/produtos3.jpg" alt="hobbies 3">
 				</div>
 			</div>
 		</section>
