Add hablidades topic

--- a/index.html
+++ b/index.html
@@ -73,48 +73,7 @@
 			</div>
 		</section>
 
-		<section class="habilidades" id="habilidades">
-			<div class="preco-item">
-				<h2>Cobre</h2>
-				<span><sup>R$</sup>19</span>
-				<ul>
-					<li>Planos Ilimitados</li>
-					<li>Acesso Restrito</li>
-					<li>Conteúdo Secreto</li>
-					<li>Suporte 24h</li>
-				</ul>
-				<a href="#">Comprar</a>
-			</div>
-			
-			<div class="preco-item">
-				<h2>Prata</h2>
-				<span><sup>R$</sup>39</span>
-				<ul>
-					<li>Planos Ilimitados</li>
-					<li>Acesso Restrito</li>
-					<li>Conteúdo Secreto</li>
-					<li>Suporte 24h</li>
-					<li>Compra Exclusiva</li>
-				</ul>
-				<a href="#">Comprar</a>
-			</div>
-			
-			<div class="preco-item">
-				<h2>Ouro</h2>
-				<span><sup>R$</sup>79</span>
-				<ul>
-					<li>Planos Ilimitados</li>
-					<li>Acesso Restrito</li>
-					<li>Conteúdo Secreto</li>
-					<li>Suporte 24h</li>
-					<li>Compra Exclusiva</li>
-					<li>Download dos Itens</li>
-				</ul>
-				<a href="#">Comprar</a>
-			</div>
-		</section>
-	
-		<section class="contato" id="contato">
+		<section class="habilidades" id="Habilidades">
 			<div class="qualidade-item">
 				<h2>Contato</h2>
 				<p>
@@ -164,7 +123,7 @@
 			</div>
 		</section>
 
-		<section class="newsletter">
+		<section class="contato">
 			<div class="newsletter-info">
 				<h1>Newsletter</h1>
 				<p>assine e fique por dentro das novidades</p>
