Finish first version

--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 		</section>
 
 		<section class="contato">
-			<div class="newsletter-info">
-				<h1>Newsletter</h1>
-				<p>assine e fique por dentro das novidades</p>
+			<div class="contato-info">
+				<h1>Contato</h1>
+				<p>Mande um miau pra nós </p>
 			</div>
-			<form class="newsletter-form">
-				<input type="text" placeholder="Seu e-mail">
-				<button type="submit">Assinar</button>
+			<form class="contato-form">
+				<input type="text" placeholder="Seu miau">
+				<button type="submit">Miar</button>
 			</form>
 		</section>
 		
