--- a/index.html
+++ b/index.html
@@ -75,50 +75,44 @@
 
 		<section class="habilidades" id="Habilidades">
 			<div class="qualidade-item">
-				<h2>Contato</h2>
+				<h2>Ronronar</h2>
 				<p>
-					O que temos que ter sempre em mente é que a determinação clara de objetivos afeta 
-					positivamente a correta previsão
+					Somos ronronadoras profissionais. Ronronamos alto e de forma relaxante.
 				</p>
 			</div>
 			
 			<div class="qualidade-item">
-				<h2>Compacto</h2>
+				<h2>Atacar</h2>
 				<p>
-					O que temos que ter sempre em mente é que a determinação 
-					clara de objetivos afeta positivamente a correta previsão das condições inegavelmente
+					Geralmente usamos essa habilidade só para brincar mesmo.
 				</p>
 			</div>
 			
 			<div class="qualidade-item">
-				<h2>Econômico</h2>
+				<h2>Correr</h2>
 				<p>
-					O que temos que ter sempre em mente é que 
-					a determinação clara de objetivos afeta positivamente a correta previsão
+					Adoramos correr e corremos bem rápido. Dúvido alguém nos pegar.
 				</p>
 			</div>
 			
 			<div class="qualidade-item">
-				<h2>Transparente</h2>
+				<h2>Morder</h2>
 				<p>
-					O que temos que ter sempre em mente é que a determinação
-					clara de objetivos afeta positivamente a correta previsão
+					Mordemos fraquinho, mas mordemos. E se for para nos defender, podemos morder forte.
 				</p>
 			</div>
 			
 			<div class="qualidade-item">
-				<h2>Opaco</h2>
+				<h2>Modelar</h2>
 				<p>
-					O que temos que ter sempre em mente é que a determinação clara 
-					de objetivos afeta positivamente a correta previsão das condições inegavelmente
+					Adoramos fazer poses para as fotos, mas sempre nos mexemos no último segundo só por brincadeira.
 				</p>
 			</div>
 			
 			<div class="qualidade-item">
-				<h2>Sustentável</h2>
+				<h2>Defender</h2>
 				<p>
-					O que temos que ter sempre em mente é que a determinação 
-					clara de objetivos afeta positivamente a correta previsão
+					Defendemos não só a gente, como também nossos humanos, espaços e brinquedos.
 				</p>
 			</div>
 		</section>
