--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 			<div class="hobbies-container">
 				<div class="hobbies-item purple">
 					<h2>Dormir</h2>
-					<img src="./img/produtos1.jpg" alt="hobbies 1">
+					<img src="./img/cat7.png" alt="hobbies 1">
 				</div>
 				<div class="hobbies-item pink">
 					<h2>Brincar</h2>
-					<img src="./img/produtos2.jpg" alt="hobbies 2">
+					<img src="./img/cat3.png" alt="hobbies 2">
 				</div>
 				<div class="hobbies-item blue">
-					<h2>Banho de sol</h2>
-					<img src="./img/produtos3.jpg" alt="hobbies 3">
+					<h2>Pegar sol</h2>
+					<img src="./img/cat5.png" alt="hobbies 3">
 				</div>
 			</div>
 		</section>
