--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</div>
 		</section>
 
-		<section class="habilidades" id="Habilidades">
+		<section class="habilidades" id="habilidades">
 			<div class="qualidade-item">
 				<h2>Ronronar</h2>
 				<p>
